infra/rds_jupyterhub.tf
resource "aws_db_instance" "jupyterhub" {
  identifier = "jupyterhub"

  allocated_storage = 20
  storage_type = "gp2"
  engine = "postgres"
  engine_version = "10.4"
  instance_class = "db.t2.medium"

  apply_immediately = true

  name = "jupyterhub"
  username = "jupyterhub_master"
  password = "${random_string.aws_db_instance_jupyterhub_password.result}"

  final_snapshot_identifier = "jupyterhub-final-snapshot"

  vpc_security_group_ids = ["${aws_security_group.jupyterhub_db.id}"]
  db_subnet_group_name = "${aws_db_subnet_group.jupyterhub.name}"
}

resource "aws_db_subnet_group" "jupyterhub" {
  name       = "jupyterhub"
  subnet_ids = ["${aws_subnet.private_with_egress.*.id}"]

  tags {
    Name = "jupyterhub"
  }
}

resource "random_string" "aws_db_instance_jupyterhub_password" {
  length = 128
  special = false
}
